<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_timetable"
        android:icon="@drawable/sl_nav_timetable"
        android:title="@string/nav_timetable" />
    <item
        android:id="@+id/nav_notices"
        android:icon="@drawable/sl_nav_notices"
        android:title="@string/nav_notices" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/sl_nav_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_pdf"
        android:icon="@drawable/sl_nav_library"
        android:title="@string/nav_library" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/sl_nav_profile"
        android:title="@string/nav_profile" />
</menu>

